// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonToggleGroup Classic theme renders correctly with default settings 1`] = `
.c1 {
  display: block;
}

.c1 + .c0 {
  margin-top: 16px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
}

.c4 {
  display: inline-block;
  height: 38px;
  padding: 0 24px;
  font-weight: 600;
  border: 1px solid #668491;
  font-size: 14px;
  background-color: #FFFFFF;
  height: auto;
  min-width: auto;
  padding: 15px 25px;
  font-weight: 900;
  border: 1px solid #ccd6db;
}

input:checked ~ .c4 {
  color: #FFFFFF;
  background-color: #003F2E;
}

input:focus ~ .c4 {
  outline: 3px solid #FFB500;
}

.c4:hover {
  background-color: #E5F4E5;
  border-color: #003F2E;
}

input:checked ~ .c4 {
  color: #FFFFFF;
  background-color: #1573e6;
}

input:focus ~ .c4 {
  outline: 0;
}

.c4:hover {
  border-color: #1e499f;
  color: #FFFFFF;
  background-color: #1e499f;
}

.c2 {
  display: inline-block;
}

.c2:not(:first-of-type) {
  margin-left: 10px;
}

.c3 {
  position: absolute;
  width: 0;
  height: 0;
  opacity: 0;
}

<div
  className="c0 c1"
>
  <div
    className=""
  >
    <div
      className="c2"
      id="foo"
      name="button-toggle-group"
      size="large"
      value="foo"
    >
      <input
        className="c3"
        id="guid-12345"
        name="button-toggle-group"
        type="radio"
      />
      <label
        className="c4"
        htmlFor="guid-12345"
        id="foo"
        name="button-toggle-group"
        size="large"
        value="foo"
      >
        <div
          className="c5"
        >
          Foo
        </div>
      </label>
    </div>
    <div
      className="c2"
      id="bar"
      name="button-toggle-group"
      size="large"
      value="bar"
    >
      <input
        className="c3"
        id="guid-12345"
        name="button-toggle-group"
        type="radio"
      />
      <label
        className="c4"
        htmlFor="guid-12345"
        id="bar"
        name="button-toggle-group"
        size="large"
        value="bar"
      >
        <div
          className="c5"
        >
          Bar
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`ButtonToggleGroup Modern theme renders correctly with default settings 1`] = `
.c1 {
  display: block;
}

.c1 + .c0 {
  margin-top: 16px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
}

.c4 {
  display: inline-block;
  height: 38px;
  padding: 0 24px;
  font-weight: 600;
  border: 1px solid #668491;
  font-size: 14px;
  background-color: #FFFFFF;
}

input:checked ~ .c4 {
  color: #FFFFFF;
  background-color: #003F2E;
}

input:focus ~ .c4 {
  outline: 3px solid #FFB500;
}

.c4:hover {
  background-color: #E5F5F1;
  border-color: #003F2E;
}

.c2 {
  display: inline-block;
}

.c2:not(:first-of-type) {
  margin-left: 10px;
}

.c3 {
  position: absolute;
  width: 0;
  height: 0;
  opacity: 0;
}

<div
  className="c0 c1"
>
  <div
    className=""
  >
    <div
      className="c2"
      id="foo"
      name="button-toggle-group"
      size="large"
      value="foo"
    >
      <input
        className="c3"
        id="guid-12345"
        name="button-toggle-group"
        type="radio"
      />
      <label
        className="c4"
        htmlFor="guid-12345"
        id="foo"
        name="button-toggle-group"
        size="large"
        value="foo"
      >
        <div
          className="c5"
        >
          Foo
        </div>
      </label>
    </div>
    <div
      className="c2"
      id="bar"
      name="button-toggle-group"
      size="large"
      value="bar"
    >
      <input
        className="c3"
        id="guid-12345"
        name="button-toggle-group"
        type="radio"
      />
      <label
        className="c4"
        htmlFor="guid-12345"
        id="bar"
        name="button-toggle-group"
        size="large"
        value="bar"
      >
        <div
          className="c5"
        >
          Bar
        </div>
      </label>
    </div>
  </div>
</div>
`;
